--- a/smd-distributors-automated-system/.project
+++ b/smd-distributors-automated-system/.project
@@ -3,6 +3,7 @@
 	<name>smd-distributors-automated-system</name>
 	<comment></comment>
 	<projects>
+		<project>Servers</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
