--- a/smd-distributors-automated-system/src/main/webapp/WEB-INF/web.xml
+++ b/smd-distributors-automated-system/src/main/webapp/WEB-INF/web.xml
@@ -1,12 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
-  <display-name>smd-distributors-automated-system</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
-</web-app>
+
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+         http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         version="3.1">
+         
+      <servlet>
+		<servlet-name>insertorder</servlet-name>
+		<servlet-class>com.smd.servlet.AddOrder</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>insertorder</servlet-name>
+		<url-pattern>/insert</url-pattern>
+	</servlet-mapping>
+         
+         <servlet>
+		<servlet-name>viewadminorder</servlet-name>
+		<servlet-class>com.smd.servlet.viewAdminOrders</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>viewadminorder</servlet-name>
+		<url-pattern>/viewadmin</url-pattern>
+	</servlet-mapping>
+         
+    </web-app>
