Inser delete update compelete

--- a/smd-distributors-automated-system/src/main/webapp/WEB-INF/web.xml
+++ b/smd-distributors-automated-system/src/main/webapp/WEB-INF/web.xml
@@ -1,12 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
-  <display-name>smd-distributors-automated-system</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+version="3.1">
+  
+  
+  <servlet>
+  			<servlet-name>EmployeeAdd</servlet-name>
+  			<servlet-class>com.smd.servlet.EmployeeAddServlet</servlet-class> 
+  </servlet>
+  
+  <servlet-mapping>
+      		<servlet-name>EmployeeAdd</servlet-name>
+  			<url-pattern>/add</url-pattern>
+  </servlet-mapping>
+  
+  
+  <servlet>
+  			<servlet-name>EmployeeView</servlet-name>
+  			<servlet-class>com.smd.servlet.EmpViewServlet</servlet-class> 
+  </servlet>
+  
+  <servlet-mapping>
+      		<servlet-name>EmployeeView</servlet-name>
+  			<url-pattern>/view</url-pattern>
+  </servlet-mapping>
+  
+  
+    <servlet>
+  			<servlet-name>EmployeeUpdate</servlet-name>
+  			<servlet-class>com.smd.servlet.UpdateEmployeeServlet</servlet-class> 
+   </servlet>
+  
+  <servlet-mapping>
+      		<servlet-name>EmployeeUpdate</servlet-name>
+  			<url-pattern>/update</url-pattern>
+  </servlet-mapping>
+  
+  
+  
+    <servlet>
+  			<servlet-name>EmployeeDelete</servlet-name>
+  			<servlet-class>com.smd.servlet.DeleteEmployeeServlet</servlet-class> 
+   </servlet>
+  
+  <servlet-mapping>
+      		<servlet-name>EmployeeDelete</servlet-name>
+  			<url-pattern>/delete</url-pattern>
+  </servlet-mapping>
+  
+  
+  <servlet>
+  			<servlet-name>EmployeeAttend</servlet-name>
+  			<servlet-class>com.smd.servlet.AttendanceEmployeeServlet</servlet-class> 
+   </servlet>
+  
+  <servlet-mapping>
+      		<servlet-name>EmployeeAttend</servlet-name>
+  			<url-pattern>/attend</url-pattern>
+  </servlet-mapping>
+  
+  
+  
+  
+  
 </web-app>
