--- a/smd-distributors-automated-system/src/main/webapp/WEB-INF/web.xml
+++ b/smd-distributors-automated-system/src/main/webapp/WEB-INF/web.xml
@@ -259,6 +259,11 @@
 		<url-pattern>/deletedOrders</url-pattern>
 	</servlet-mapping>
 
+
+
+
+<!-- Employee Management -->
+
 	<servlet>
   			<servlet-name>EmployeeAdd</servlet-name>
   			<servlet-class>com.smd.servlet.EmployeeAddServlet</servlet-class> 
@@ -304,15 +309,6 @@
   </servlet-mapping>
   
   
-  <servlet>
-  			<servlet-name>EmployeeAttend</servlet-name>
-  			<servlet-class>com.smd.servlet.AttendanceEmployeeServlet</servlet-class> 
-   </servlet>
-  
-  <servlet-mapping>
-      		<servlet-name>EmployeeAttend</servlet-name>
-  			<url-pattern>/attendemp</url-pattern>
-  </servlet-mapping>
   
    <servlet>
   			<servlet-name>EmployeeCalSal</servlet-name>
@@ -323,5 +319,55 @@
       		<servlet-name>EmployeeCalSal</servlet-name>
   			<url-pattern>/calc</url-pattern>
   </servlet-mapping>
+	
+	
+	
+	
+	<servlet>
+  			<servlet-name>EmployeeBestAttend</servlet-name>
+  			<servlet-class>com.smd.servlet.EmpBestAttendanceServlet</servlet-class> 
+   </servlet>
+  
+  <servlet-mapping>
+      		<servlet-name>EmployeeBestAttend</servlet-name>
+  			<url-pattern>/attendemp</url-pattern>
+  </servlet-mapping>
+  
+	
+	
+		
+	<servlet>
+  			<servlet-name>EmployeeMonthSal</servlet-name>
+  			<servlet-class>com.smd.servlet.EmployeeMonthlySalary</servlet-class> 
+   </servlet>
+  
+  <servlet-mapping>
+      		<servlet-name>EmployeeMonthSal</servlet-name>
+  			<url-pattern>/empSal</url-pattern>
+  </servlet-mapping>
+  
+	
+	
+	<servlet>
+  			<servlet-name>EmplyBasicIn</servlet-name>
+  			<servlet-class>com.smd.servlet.EmployeeBasicDetailsServlet</servlet-class> 
+   </servlet>
+  
+  <servlet-mapping>
+      		<servlet-name>EmplyBasicIn</servlet-name>
+  			<url-pattern>/employeeBasInfo</url-pattern>
+  </servlet-mapping>
+  
+	
+		<servlet>
+  			<servlet-name>EmplyResignDetails</servlet-name>
+  			<servlet-class>com.smd.servlet.EmployeeResignedServlet</servlet-class> 
+   </servlet>
+  
+  <servlet-mapping>
+      		<servlet-name>EmplyResignDetails</servlet-name>
+  			<url-pattern>/employeeresigninfo</url-pattern>
+  </servlet-mapping>
+  
   
 </web-app>
