--- a/smd-distributors-automated-system/src/main/webapp/WEB-INF/web.xml
+++ b/smd-distributors-automated-system/src/main/webapp/WEB-INF/web.xml
@@ -51,8 +51,6 @@
 		<url-pattern>/updated</url-pattern>
 	</servlet-mapping>
 
-
-
 	<servlet>
 		<servlet-name>deleted</servlet-name>
 		<servlet-class>com.smd.servlet.deleteDeliveryServlet</servlet-class>
@@ -61,6 +59,16 @@
 		<servlet-name>deleted</servlet-name>
 		<url-pattern>/deleted</url-pattern>
 	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>viewveh</servlet-name>
+		<servlet-class>com.smd.servlet.VehicleDetailsServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>viewveh</servlet-name>
+		<url-pattern>/viewveh</url-pattern>
+	</servlet-mapping>
+	
 
 	<!-- <welcome-file-list> <welcome-file>index.html</welcome-file> <welcome-file>index.htm</welcome-file> 
 		<welcome-file>index.jsp</welcome-file> <welcome-file>default.html</welcome-file> 
